Add user registration, confirming by token
