# cmd/api/api.go
@@ -15,7 +15,7 @@ import (
 // @title			GopherSocial API
 // @version		1.0
 // @description	API documentation for GopherSocial.
-// @host			localhost:8080
+// @host			localhost:8082
 // @BasePath		/v1
 type application struct {
 	config config
@@ -27,8 +27,12 @@ type config struct {
 	addr string
 	db   dbConfig
 	env  string
+	mail mailConfig
 }
 
+type mailConfig struct {
+	exp time.Duration
+}
 type dbConfig struct {
 	addr         string
 	maxOpenConns int
@@ -69,6 +73,9 @@ func (app *application) mount() *chi.Mux {
 		})
 
 		r.Route("/users", func(r chi.Router) {
+
+			r.Put("/activate/{token}", app.activateUserHandler)
+
 			r.Route("/{userID}", func(r chi.Router) {
 				r.Use(app.userContextMiddleware)
 
@@ -80,6 +87,11 @@ func (app *application) mount() *chi.Mux {
 			r.Group(func(r chi.Router) {
 				r.Get("/feed", app.getUserFeedHandler)
 			})
+		})
+
+		// Public routes
+		r.Route("/authentication", func(r chi.Router) {
+			r.Post("/user", app.registerUserHandler)
 		})
 	})
 
